2012-02-23 Ugo Pattacini <ugo.pattacini@iit.it>
    pmp library: added setPointOrientation() and
    executeTrajectory() methods.

2012-02-22 Ugo Pattacini <ugo.pattacini@iit.it>
    iKinGazeCtrl now handles VOR and OCR gains.

2012-02-21 Ugo Pattacini <ugo.pattacini@iit.it>
    Added one new functionality to the Gaze Interface:
    lookAtMonoPixelWithVergence().

2012-02-17 Ugo Pattacini <ugo.pattacini@iit.it>
    Added two new functionalities to the Gaze Interface:
    get3DPointFromAngles() and getAnglesFrom3DPoint().

2012-02-09 Ugo Pattacini <ugo.pattacini@iit.it>
    The Cartesian Control now handles the plant model.

2012-02-09 Alessandro Scalzo <alessandro.scalzo@iit.it>
    EMS ethLoader splitted in library/GUI.
    * iCub\main\src\tools\ethLoader\CMakeLists.txt
    * iCub\main\src\tools\ethLoader\ethLoader\CMakeLists.txt    
    * iCub\main\src\tools\ethLoader\ethLoader\main.cpp
    * iCub\main\src\tools\ethLoader\ethLoaderLib\CMakeLists.txt
    * iCub\main\src\tools\ethLoader\ethLoaderLib\BoardInfo.h
    * iCub\main\src\tools\ethLoader\ethLoaderLib\BoardList.h
    * iCub\main\src\tools\ethLoader\ethLoaderLib\DSocket.cpp
    * iCub\main\src\tools\ethLoader\ethLoaderLib\DSocket.h
    * iCub\main\src\tools\ethLoader\ethLoaderLib\EthUpdater.cpp
    * iCub\main\src\tools\ethLoader\ethLoaderLib\EthUpdater.h

2012-02-08 Alessandro Scalzo <alessandro.scalzo@iit.it>
    Added EMS network firmware updater GUI.
    * iCub\main\src\tools\ethLoader\CMakeLists.txt
    * iCub\main\src\tools\ethLoader\ethLoader\BoardInfo.h
    * iCub\main\src\tools\ethLoader\ethLoader\BoardList.h
    * iCub\main\src\tools\ethLoader\ethLoader\CMakeLists.txt
    * iCub\main\src\tools\ethLoader\ethLoader\DSocket.h
    * iCub\main\src\tools\ethLoader\ethLoader\EthUpdater.cpp
    * iCub\main\src\tools\ethLoader\ethLoader\EthUpdater.h
    * iCub\main\src\tools\ethLoader\ethLoader\main.cpp

2012-01-28 Lorenzo Natale <lorenzo.natale@iit.it>